updated the edit-profile page, corrected the alignment of error messages on different pages, updated heading, font & colors etc.

--- a/src/assets/css/user/external.css
+++ b/src/assets/css/user/external.css
@@ -2159,7 +2159,7 @@ h3.gutter-bottom-1 {
 }
 
 .css-p62xri .flexed-header .widget {
-  padding: 16px;
+  padding: 16px 0;
 }
 
 .css-v3buwk {
@@ -2224,7 +2224,6 @@ h3.gutter-bottom-1 {
       padding-top: 0px;
       padding-right: 0px;
       padding-bottom: 0px;
-      padding-left: 11.4px;
   }
 }
 
@@ -2497,7 +2496,6 @@ h3.gutter-bottom-1 {
 
   .css-1gqyvx6.column>.inner-column {
       padding-top: 0px;
-      padding-right: 11.4px;
       padding-bottom: 0px;
       padding-left: 0px;
   }
